# snescape

./: .gitignore  Cargo.toml  README.md
doc/: inspiration.md
src/: cpu.rs  lib.rs  snes.rs
