[package]
name = "snescape"
description = "A SNES emulator crafted in Rust."
version = "0.0.1"
authors = ["João Magalhães <joamag@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/joamag/snescape"
keywords = ["snes", "emulator", "rust"]
edition = "2021"
exclude = ["/frontends", "/res/roms", "/res/screens", "/res/videos"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]
